Prevent text overflow for long text

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,6 +8,7 @@ body {
   min-width: 100vw;
   max-width: 100vw;
   box-sizing: content-box;
+  word-break: break-word;
 }
 
 h1 {
